# Authorization-Authentication

./: .env.template  README.md  alembic.ini  config.py  docker-compose.yaml  main.py  pyproject.toml  seed_data.py
alembic/: env.py
alembic/versions/: 93092b42285d_initial_schema.py
core/: __init__.py  db_helper.py  models.py  schemas.py
middleware/: __init__.py  permissions.py
routes/: admin.py  auth.py  mock_resourses.py
services/: auth_service.py  authz_service.py
tests/: conftest.py  test_admin.py  test_auth.py  test_authz.py
